- Support defining options_for_association_conditions and association_klass_scoped helpers prefixed with model name. Useful when clear_helpers is not called in ApplicationController.
- Fix class for columns with form_ui or css_class when refreshing column
- Eval after_config_callback proc in the context of AS config
- Fix registering constrained fields on polymorphic association

= 3.7.4
- Support loading both jquery and jquery-ui externally
- Fix subquery in search with STI

= 3.7.3.1
- Fix search, view was broken when reset_form was added

= 3.7.3
- Escape _ and % when using search with LIKE
- Fix ID in nested scaffolds when parent record has string primary key, with invalid chars for HTML ID
- Fix search with recordselect multiple
- Support loading jquery-ui externally, without jquery-ui-rails gem and ask AS to load JS/CSS for addons based on jquery-ui
- Support usage with importmap
- Add reset_form to search and field_search, when enabled, reset link will clear input fields in the search form, instead of refreshing the list without search and closing the form.
- Fix for mongoid 7

= 3.7.2
- Fix routes

= 3.7.1
- Nullable boolean columns default to use :boolean form_ui instead of :checkbox
- Display the value set in options[:include_blank] for boolean columns when value is nil, to match the label in the form
- Support :select_multiple in search_ui, and :draggable in form_ui and search_ui, as shorthands
- Support assigning options next to the UI type in form_ui, list_ui, show_ui, search_ui, so they are used instead of common options
- Support :refresh_link option in :select form_ui for non-association columns
- Support using a hash in :refresh_link option instead of true, with html
- Support select with multiple attribute for plural associations using :select form_ui, instead of checkboxes, using {html_options: {multiple: true}}, or :select_multiple
- Support attributes= in column, to set multiple settings with a hash